chau_lp 16h10 07/01 update complete

--- a/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
@@ -1,7 +1,7 @@
 <h3 class="text-primary text-center">C06Parking kính thông báo</h3>
 <hr>
 <div *ngIf="message == 'complete'">
-  <img id="succeed" src="https://i.pinimg.com/originals/14/9f/64/149f641c95e40c2296372b86a6e7fcf2.gif" alt="succeed"/>
+  <img id="succeed" src="../../../../assets/succeed.PNG" alt="succeed"/>
   <p id="messageSucceed">Quý khách đã gia hạn vé thành công.</p>
   <p>Cảm ơn quý khách đã sử dụng dịch vụ của chúng tôi!</p>
 </div>
