--- a/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.css
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.css
@@ -1,5 +1,5 @@
 img {
-  margin-bottom: 2%;
+  margin: 5% 0;
 }
 
 #momo {
@@ -23,5 +23,5 @@ p {
 }
 
 #messageSucceed {
-  margin: 1.1% 0 1.5% 0;
+  margin: 3% 0;
 }
