front-end-ngan-Jan7th

--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -11,7 +11,7 @@
 	<div class="card">
 		<div class="card-header">
 			<h2 class="mb-0">
-				<a href="#">
+        <a class="nav-link" [routerLink]="['/admin/customer-list']">
 					<span><i class="fa fa-users"></i> Quản lý khách hàng</span>
 				</a>
 			</h2>
