add registered car feature

--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -109,7 +109,7 @@
           <div class="col">
             <mat-form-field class="example-full-width">
               <mat-label>Ngày bắt đầu</mat-label>
-              <input matInput formControlName="beginDate">
+              <input matInput formControlName="startDate">
             </mat-form-field>
           </div>
         </div>
