update 8h25 08/01 chau merge Lanh

--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -38,8 +38,10 @@
 	<div class="card">
 		<div class="card-header">
 			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-id-card-o"></i> Quản lý vé</span>
+				<a href="#" [routerLink]="'/employee/member-card-list'">
+					<span>
+            <i class="fa fa-id-card-o"></i> Quản lý vé
+          </span>
 				</a>
 			</h2>
 		</div>
