--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -38,7 +38,7 @@
 	<div class="card">
 		<div class="card-header">
 			<h2 class="mb-0">
-				<a href="#">
+				<a href="#" [routerLink]="'/employee/member-card-list'">
 					<span><i class="fa fa-id-card-o"></i> Quản lý vé</span>
 				</a>
 			</h2>
