--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -46,7 +46,7 @@
       </div>
       <div class="col-6">
         <a class="btn btn-primary" (click)="findCar()">Tìm xe</a>
-        <button class="btn btn-primary" routerLink="/employee/parking-map">Bản đồ</button>
+        <button class="btn btn-primary ml-1" routerLink="/employee/parking-map">Bản đồ</button>
       </div>
       <div class="col-3">
         <mat-error>{{message}}</mat-error>
@@ -135,7 +135,7 @@
     </div>
     <div class="row mt-2 d-flex justify-content-end">
       <div class="col-3 d-flex justify-content-end">
-        <button class="btn btn-primary">Xếp chỗ</button>
+        <button class="btn btn-primary mr-1">Xếp chỗ</button>
         <a class="btn btn-primary" (click)="checkout()">Rời bãi</a>
       </div>
     </div>
