--- a/sprint2-frontend/src/app/authentication/component/forgot-password/forgot-password.component.html
+++ b/sprint2-frontend/src/app/authentication/component/forgot-password/forgot-password.component.html
@@ -1,22 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Giao Diện Quên Mật Khẩu</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <style>
-    .registeredPage {
-      background-image: url("https://sika.scene7.com/is/image/sika/glo-car-parking-garage-floor-03?wid=1280&crop=0%2C114%2C3840%2C2443");
-      background-size: 100%;
-      height: 100%;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-
-  </style>
-</head>
-<body>
 <div class="registeredPage container-fluid">
   <div class="row" style="height: 100vh">
     <div class="col-lg-12 col-xl-12 col-sm-12 col-md-12 col-xs-12">
@@ -59,7 +40,7 @@
               <button type="submit" class=" rounded btn btn-danger mr-3">
                 Tìm kiếm
               </button>
-              <button type="button" class="rounded btn btn-dark " [routerLink]="['/authentication/login']">
+              <button type="button" class="rounded btn btn-dark " [routerLink]="['/login']">
                 Quay lại
               </button>
             </div>
@@ -70,5 +51,4 @@
     </div>
   </div>
 </div>
-</body>
-</html>
+
