--- a/sprint2-frontend/src/app/authentication/component/login/login.component.html
+++ b/sprint2-frontend/src/app/authentication/component/login/login.component.html
@@ -1,33 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Giao Diện Đăng nhập</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    .loginPage {
-      background-image: url("https://sika.scene7.com/is/image/sika/glo-car-parking-garage-floor-03?wid=1280&crop=0%2C114%2C3840%2C2443");
-      background-size: 100%;
-      height: 100%;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-    * {
-      box-sizing: border-box;
-    }
-    .fb {
-      background-color: #3B5998;
-      color: white;
-    }
-
-    .google {
-      background-color: #dd4b39;
-      color: white;
-
-    }
-  </style>
-</head>
-<body>
 <div class="loginPage container-fluid">
   <div class="row" style="height: 100vh">
     <div class="col-lg-12 col-xl-12 col-sm-12 col-md-12 col-xs-12">
@@ -36,6 +6,7 @@
            style="background-color: white; border-radius: 5px">
         <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
           <div class="row d-flex justify-content-center">
+            <p class="text-danger d-flex justify-content-center">{{messageError}}</p>
             <h3 class="text-center mt-3">Đăng nhập</h3>
           </div>
           <div class="row input-group  mx-auto mt-2  ">
@@ -59,19 +30,18 @@
             <input type="password" formControlName="password" class="form-control"
                    placeholder="Mật Khẩu" style="height: 45px">
           </div>
-          <div class="row d-flex justify-content-center mt-1" >
+          <div class="row d-flex justify-content-center mt-1">
             <p *ngIf="loginForm.controls.password.errors?.required &&
               loginForm.controls.password.touched"
                class="text-danger">
-            Vui lòng nhập mật khẩu và không để trống
+              Vui lòng nhập mật khẩu và không để trống
             </p>
           </div>
-          <div class="row d-flex justify-content-center mt-1" >
+          <div class="row d-flex justify-content-center mt-1">
             <p *ngIf="loginForm.controls.password.errors?.pattern &&
               loginForm.controls.password.touched"
-             class="text-danger" >
-
-            Mật khẩu tổi thiểu 8 kí tự, 1 chữ thườmg, 1 chữ in hoa và 1 số
+               class="text-danger">
+              Mật khẩu yêu cầu phải lớn hơn 6 ký tự và không có ký tự đặc biệt.
             </p>
           </div>
 
@@ -79,22 +49,22 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6 d-flex justify-content-center">
               <div class="row">
-                  <button type="submit" (click)="onSubmit()" class=" rounded btn btn-danger ">
-                    Đăng nhập
-                  </button>
-                  <button type="reset" (click)="reset()" class="  rounded btn btn-dark ml-3">
-                    Nhập Lại
-                  </button>
+                <button type="submit" (click)="onSubmit()" class=" rounded btn btn-danger ">
+                  Đăng nhập
+                </button>
+                <button type="reset" (click)="resetInput()" class="  rounded btn btn-dark ml-3">
+                  Nhập Lại
+                </button>
               </div>
             </div>
             <div class="col-lg-3"></div>
           </div>
           <div class="row mt-3">
             <div class="col-lg-6 d-flex justify-content-center">
-              <a [routerLink]="['/authentication/forgot-password']" >Quên mặt khẩu?</a>
+              <a (click)="reset()" style="color: blue">Quên mật khẩu?</a>
             </div>
-            <div class="col-lg-6 d-flex justify-content-center" >
-              <a [routerLink]="['/authentication/sign-up']">Tạo tài khoản mới?</a>
+            <div class="col-lg-6 d-flex justify-content-center">
+              <a [routerLink]="['/sign-up']">Tạo tài khoản mới?</a>
             </div>
           </div>
           <div class="row mt-1">
@@ -109,12 +79,12 @@
           <div class="row my-2">
             <div class="col-lg-12 ">
               <div class="row mt-2 d-flex justify-content-center">
-                <button type="button" class="fb btn rounded" (click)="loginFacebook()">
+                <button type="button" class="fb btn rounded" (click)="signInWithFB()">
                   <i class="fa fa-facebook fa-fw w-auto"></i> Đăng nhập bằng Facebook
                 </button>
               </div>
               <div class="row mt-2 d-flex justify-content-center">
-                <button class="google btn rounded " (click)="loginGoogle()">
+                <button class="google btn rounded " (click)="signInWithGoogle()">
                   <i class="fa fa-google fa-fw"></i>Đăng nhập bằng Google+
                 </button>
               </div>
@@ -126,7 +96,5 @@
     </div>
   </div>
 </div>
-</body>
-</html>
 
 
