--- a/sprint2-frontend/src/app/app.component.html
+++ b/sprint2-frontend/src/app/app.component.html
@@ -5,12 +5,10 @@
 <!--			<app-side-bar></app-side-bar>-->
 <!--		</div>-->
 <!--		<div class="col-lg-9 mx-auto">-->
-
-
-<router-outlet></router-outlet>
+<!--      <router-outlet></router-outlet>-->
 <!--		</div>-->
 <!--	</div>-->
 <!--</div>-->
 <!--<app-footer></app-footer>-->
 
-
+<router-outlet></router-outlet>
