--- a/sprint2-frontend/src/app/app-employee/member-card/member-card-create/member-card-create.component.html
+++ b/sprint2-frontend/src/app/app-employee/member-card/member-card-create/member-card-create.component.html
@@ -10,7 +10,7 @@
           <input class="form-control" type="text" formControlName="plateNumber">
           <p class="text-danger" *ngIf="memberCardForm.get('plateNumber').hasError('pattern')
           && (memberCardForm.controls.plateNumber?.dirty || memberCardForm.controls.plateNumber?.touched)">
-            Sai định dạng. Biển số xe có định dạng vd: 43A1-09999.
+            Sai định dạng. Biển số xe có định dạng vd: RK755AJ.
           </p>
           <p class="text-danger"
              *ngIf="memberCardForm.get('plateNumber').hasError('required')
@@ -62,6 +62,18 @@
         </div>
       </div>
 
+      <div class="form-group px-3 d-flex justify-content-end">
+        <label class="col-3 ml-3">Ngày bất đầu<span class="text-danger"> *</span></label>
+        <div class="col-9">
+          <mat-form-field appearance="fill" (change)="setEndDate()">
+            <input class="form-control" matInput [matDatepicker]="startPicker" (change)="setEndDate()"
+                   [(ngModel)]="startDateInput" formControlName="startDate">
+            <mat-datepicker-toggle matSuffix [for]="startPicker" (change)="setEndDate()"></mat-datepicker-toggle>
+            <mat-datepicker #startPicker (change)="setEndDate()"></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+
 
       <div class="form-group px-3 d-flex justify-content-end">
         <label class="col-3 ml-3">Loại thẻ<span class="text-danger"> *</span></label>
@@ -78,18 +90,6 @@
         </div>
       </div>
 
-      <div class="form-group px-3 d-flex justify-content-end">
-        <label class="col-3 ml-3">Ngày bất đầu<span class="text-danger"> *</span></label>
-        <div class="col-9">
-          <mat-form-field appearance="fill" (change)="setEndDate()">
-            <input class="form-control" matInput [matDatepicker]="startPicker" (change)="setEndDate()"
-                   [(ngModel)]="startDateInput" formControlName="startDate">
-            <mat-datepicker-toggle matSuffix [for]="startPicker" (change)="setEndDate()"></mat-datepicker-toggle>
-            <mat-datepicker #startPicker (change)="setEndDate()"></mat-datepicker>
-          </mat-form-field>
-        </div>
-      </div>
-      
 
       <div class="form-group px-3 d-flex justify-content-end">
         <label class="col-3 ml-3">Ngày kết thúc<span class="text-danger"> *</span></label>
