--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -135,7 +135,7 @@
     </div>
     <div class="row mt-2 d-flex justify-content-end">
       <div class="col-3 d-flex justify-content-end">
-        <button class="btn btn-primary mr-1">Xếp chỗ</button>
+        <button class="btn btn-primary mr-1">Vào bãi</button>
         <a class="btn btn-primary" (click)="checkout()">Rời bãi</a>
       </div>
     </div>
