complete map feature

--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -42,15 +42,16 @@
           <mat-label>Biển số xe</mat-label>
           <input matInput formControlName="plateNumber">
           <mat-error *ngIf="ticketForm.get('plateNumber').hasError('required')">Vui lòng nhập biển số</mat-error>
+          <mat-error *ngIf="ticketForm.get('plateNumber').hasError('maxlength')">Biển số xe không quá 10 kí tự</mat-error>
         </mat-form-field>
       </div>
       <div class="col-6">
         <a class="btn btn-primary" (click)="findCar()">Tìm xe</a>
         <button class="btn btn-primary ml-1" routerLink="/employee/parking-map">Bản đồ</button>
       </div>
-      <div class="col-3">
+      <!--<div class="col-3">
         <mat-error>{{message}}</mat-error>
-      </div>
+      </div>-->
     </div>
     <!--    car image and time end-->
     <!--form-->
