--- a/sprint2-frontend/src/app/app-employee/entry-management/parking-map/parking-map.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/parking-map/parking-map.component.html
@@ -158,7 +158,7 @@
       </div>
       <!--      parking slots end-->
       <div class="row mt-5">
-        <div class="col-6">Số chỗ trống: 50</div>
+        <div class="col-6">Số chỗ trống: {{availableSlots}}</div>
         <div class="col-6 d-flex justify-content-end">
           <span class="d-flex justify-content-center" id="exit">Cửa ra</span>
         </div>
