--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-customer/statistic-customer.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-customer/statistic-customer.component.html
@@ -8,13 +8,16 @@
   <div class="statistics bg-light">
     <form [formGroup]="formStatisticCustomerRegisterPeriod" (ngSubmit)="openStatisticCustomerRegisterPeriod()">
       <div class="row">
-        <div class="col-lg-7 col-md-7 col-sm-7 col-xl-7 ">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
 
           <mat-form-field color="accent" appearance="fill" class="mr-2">
             <mat-label>Ngày bắt đầu (*)</mat-label>
             <input matInput [matDatepicker]="picker1" formControlName="fromDay">
             <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
             <mat-datepicker #picker1></mat-datepicker>
+            <mat-error *ngIf="formStatisticCustomerRegisterPeriod.controls.fromDay.errors?.required">
+              Không được để trống
+            </mat-error>
           </mat-form-field>
 
           <mat-form-field color="accent" appearance="fill">
@@ -22,15 +25,17 @@
             <input matInput [matDatepicker]="picker2" formControlName="toDay">
             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
             <mat-datepicker #picker2 color="primary"></mat-datepicker>
+            <mat-error *ngIf="formStatisticCustomerRegisterPeriod.controls.toDay.errors?.required">
+              Không được để trống
+            </mat-error>
           </mat-form-field>
 
+          <button type="submit" class="btn btn-primary mb-2" style="margin-left: 330px">
+            Xem thống kê
+          </button>
+          <p style="color: red; font-weight: bolder; margin-left: 20px">{{message}}</p>
         </div>
 
-        <div class="col-lg-5 col-md-5 col-sm-5" style="padding-top: 22px">
-          <button type="submit" class="btn btn-success mr-2">Xem thống kê</button>
-          <button class="btn btn-primary mr-2">Xem báo cáo</button>
-          <button class="btn btn-dark ">Xuất báo cáo</button>
-        </div>
       </div>
     </form>
   </div>
@@ -38,8 +43,8 @@
   <div class="mr-0">
     <div class="integrated-statistics row container-fluid p-0 m-0">
       <div class="row">
-        <div>
-          <canvas id="statistic-customer" style="position: relative; height:70vh; width:70vw"></canvas>
+        <div style="margin-left: 25px">
+          <div id="statistic-customer" style="position: relative; height:70vh; width:70vw"></div>
         </div>
       </div>
     </div>
