--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
@@ -7,13 +7,16 @@
   </div>
   <form [formGroup]="formStatisticRevenuePeriod" (ngSubmit)="openStatisticRevenuePeriod()">
     <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 ">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
 
         <mat-form-field color="accent" appearance="fill" class="mr-2">
           <mat-label>Ngày bắt đầu (*)</mat-label>
           <input matInput [matDatepicker]="picker1" formControlName="fromDayPayment">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
           <mat-datepicker #picker1></mat-datepicker>
+          <mat-error *ngIf="formStatisticRevenuePeriod.controls.fromDayPayment.errors?.required">
+            Không được để trống
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field color="accent" appearance="fill" class="mr-2">
@@ -21,6 +24,9 @@
           <input matInput [matDatepicker]="picker2" formControlName="toDayPayment">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2 color="primary"></mat-datepicker>
+          <mat-error *ngIf="formStatisticRevenuePeriod.controls.toDayPayment.errors?.required">
+            Không được để trống
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
@@ -30,30 +36,28 @@
               {{value.valueView}}
             </mat-option>
           </mat-select>
+          <mat-error *ngIf="formStatisticRevenuePeriod.controls.typeReport.errors?.required">
+            Không được để trống
+          </mat-error>
         </mat-form-field>
 
+        <button type="submit" class="btn btn-primary mr-2" style="margin-left: 150px">Xem thống kê</button>
       </div>
+      <p style="color: red; font-weight: bolder; margin-left: 20px">{{message}}</p>
     </div>
 
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 p-3 d-flex justify-content-end">
-        <button type="submit" class="btn btn-success mr-2">Xem thống kê</button>
-        <button class="btn btn-primary mr-2">Xem báo cáo</button>
-        <button class="btn btn-dark ">Xuất báo cáo</button>
-      </div>
-    </div>
+
   </form>
 
 </div>
-<div class="statistics mr-0">
+<div class="statistics mr-0 bg-light ">
   <div class=" row container-fluid p-0 m-0">
-    <div class=" row mr-2">
-      <div *ngIf="typeReport ==='reMemberCard'">
-        <canvas id="statistic-revenue-member-card" style="position: relative; height:60vh; width:70vw"></canvas>
-      </div>
-      <div *ngIf="typeReport ==='reTicket'">
-        <canvas id="statistic-revenue-ticket" style="position: relative; height:60vh; width:70vw"></canvas>
-      </div>
+    <div *ngIf="typeReport ==='reMemberCard'">
+      <div id="statistic-revenue-member-card"
+           style="position: relative; height:60vh; width:73vw"></div>
+    </div>
+    <div *ngIf="typeReport ==='reTicket'">
+      <div id="statistic-revenue-ticket" style="position: relative; height:60vh; width:73vw"></div>
     </div>
   </div>
 </div>
