--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
@@ -1,10 +1,12 @@
 <div class="statistics-overview">
+
   <div class="statistics p-2 mx-auto bg-light">
     <button class="pcx" routerLink="/admin/statistic-overview">Tổng hợp</button>
     <button class="pcx" routerLink="/admin/statistic-ticket">Thống kê vé</button>
     <button class="pcx" routerLink="/admin/statistic-revenue">Thống kê doanh thu</button>
     <button class="pcx" routerLink="/admin/statistic-customer-register">Thống kê số lượng khách hàng</button>
   </div>
+
   <form [formGroup]="formStatisticMemberCard" (ngSubmit)="openStatisticMemberCard()">
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
@@ -16,6 +18,9 @@
               {{value.valueView}}
             </mat-option>
           </mat-select>
+          <mat-error *ngIf="formStatisticMemberCard.controls.typeReport.errors?.required">
+            Không được để trống
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="mr-2">
@@ -25,16 +30,25 @@
             <mat-option *ngFor="let value of weekParams" [value]="value.value">
               {{value.valueView}}
             </mat-option>
+            <mat-error *ngIf="formStatisticMemberCard.controls.week.errors?.required">
+              Không được để trống
+            </mat-error>
           </mat-select>
+
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="mr-2">
           <mat-label>Chọn tháng (*)</mat-label>
-          <mat-select formControlName="month" [disabled]="formStatisticMemberCard.controls.typeReport.value === 'year'">
+          <mat-select formControlName="month"
+                      [disabled]="formStatisticMemberCard.controls.typeReport.value === 'year'">
             <mat-option *ngFor="let value of monthParams" [value]="value.value">
               {{value.valueView}}
             </mat-option>
+            <mat-error *ngIf="formStatisticMemberCard.controls.month.errors?.required">
+              Không được để trống
+            </mat-error>
           </mat-select>
+
         </mat-form-field>
 
         <mat-form-field appearance="fill">
@@ -43,7 +57,11 @@
             <mat-option *ngFor="let value of yearParams" [value]="value.value">
               {{value.valueView}}
             </mat-option>
+            <mat-error *ngIf="formStatisticMemberCard.controls.year.errors?.required">
+              Không được để trống
+            </mat-error>
           </mat-select>
+
         </mat-form-field>
 
       </div>
@@ -51,28 +69,25 @@
 
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 p-3 d-flex justify-content-end">
-        <button type="submit" class="btn btn-success mr-2">Xem thống kê</button>
-        <button class="btn btn-primary mr-2">Xem báo cáo</button>
-        <button class="btn btn-dark ">Xuất báo cáo</button>
+        <button class="btn btn-primary mr-2">Xem thống kê</button>
       </div>
     </div>
+    <p style="color: red; font-weight: bolder; margin-left: 20px">{{message}}</p>
   </form>
 
   <div class="statistics mr-0">
-    <div class="row container-fluid p-0 m-0">
-      <div class="row mr-2">
-        <div *ngIf="typeReport === 'week'">
-          <canvas id="statistic-member-card-week" style="position: relative; height:60vh; width:70vw"></canvas>
-        </div>
-        <div *ngIf="typeReport === 'month'">
-          <canvas id="statistic-member-card-month" style="position: relative; height:60vh; width:70vw"></canvas>
-        </div>
-        <div *ngIf="typeReport === 'year'">
-          <canvas id="statistic-member-card-year" style="position: relative; height:60vh; width:70vw"></canvas>
-        </div>
+    <div class="row container-fluid p-0 m-0 mr-2">
+
+      <div *ngIf="typeReport === 'week'">
+        <div id="statistic-member-card-week" style="position: relative; height:60vh; width:72vw"></div>
       </div>
+      <div *ngIf="typeReport === 'month'">
+        <div id="statistic-member-card-month" style="position: relative; height:60vh; width:72vw"></div>
+      </div>
+      <div *ngIf="typeReport === 'year'">
+        <div id="statistic-member-card-year" style="position: relative; height:60vh; width:72vw"></div>
+      </div>
+
     </div>
   </div>
-
 </div>
-
