--- a/sprint2-frontend/src/styles.css
+++ b/sprint2-frontend/src/styles.css
@@ -1,5 +1,55 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-.app-full-bleed-dialog .mat-dialog-container {
-  padding: 0;
+
+
+/*Danh CSS Chart*/
+
+.highcharts-data-table table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  background: white;
+  min-width: 100%;
+  margin-top: 10px;
+  font-family: sans-serif;
+  font-size: 0.9em;
+  color: #435d7d;
+}
+
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+  border: 1px solid silver;
+  padding: 0.5em;
+}
+
+.highcharts-data-table tr:nth-child(even), .highcharts-data-table thead tr {
+  background: #f8f8f8;
+}
+
+.highcharts-data-table tr:hover {
+  background: #eff;
+}
+
+.highcharts-data-table caption {
+  border-bottom: none;
+  font-size: 1.1em;
+  font-weight: bold;
+}
+
+.highcharts-figure, .highcharts-data-table table {
+  min-width: 310px;
+  max-width: 800px;
+  margin: 1em auto;
+}
+
+.highcharts-data-table tr:hover {
+  background: #f1f7ff;
+}
+
+.highcharts-data-table caption {
+  text-align: center;
+  justify-content: center;
+  border: 1px solid silver;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #435d7d;
+  background-color: #ffd887;
 }
