chau up before merge Lanh

--- a/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
@@ -10,7 +10,7 @@
   <p>Quý khách vui lòng liên hệ nhân viên để khắc phục sự cố. Mong quý khách thông cảm! Xin cảm ơn!</p>
 </div>
 <div *ngIf="message == 'MoMo fail'">
-  <img src="../../../../assets/repair.jpg" alt="repair" style="width: 95%;"/>
+  <img src="../../../../assets/repair.jpg" alt="repair" style="width: 95%"/>
   <p>Hệ thống tích hợp thanh toán bằng <span id="momo">MoMo</span> hiện đang bảo trì.</p><br>
   <p id="message">Quý khách vui lòng thanh toán bằng <span id="paypal">PayPal</span> hoặc liên hệ nhân viên để gia hạn.
     Mong quý khách thông cảm! Xin cảm ơn!</p>
