--- a/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.css
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.css
@@ -1,28 +1,3 @@
-img {
-  margin: 2.5% 0;
-}
-
-#momo {
-  color: red;
-}
-
-#paypal {
-  color: blue;
-}
-
-#message {
-  margin: -2% 0;
-}
-
-#succeed {
-  width: 99%;
-  margin: 5% 0;
-}
-
-p {
-  margin: 0 0 0 0;
-}
-
-#messageSucceed {
-  margin: 3% 0;
+.btn {
+  margin: -5% 0 0 0;
 }
