update price readonly

--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -120,7 +120,7 @@
           <div class="col">
             <mat-form-field class="example-full-width">
               <mat-label>Tổng tiền</mat-label>
-              <input matInput formControlName="price">
+              <input matInput formControlName="price" readonly>
             </mat-form-field>
           </div>
         </div>
