Chau update Hoat complete 10h33 11/01

--- a/sprint2-frontend/src/app/app-employee/member-card/member-card-list/member-card-list.component.html
+++ b/sprint2-frontend/src/app/app-employee/member-card/member-card-list/member-card-list.component.html
@@ -56,10 +56,10 @@
           <td>{{memberCard.price | currency: ' '}}</td>
           <td>
             <div class="d-flex justify-content-center">
-              <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
+              <a (click)="openDialogEdit(memberCard.id)" class="edit" data-toggle="modal"><i class="material-icons"
                                                                                data-toggle="tooltip"
                                                                                title="Edit">&#xE254;</i></a>
-              <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons"
+              <a (click)="openDialogDelete(memberCard.id)" class="delete" data-toggle="modal"><i class="material-icons"
                                                                                    data-toggle="tooltip"
                                                                                    title="Delete">&#xE872;</i></a>
             </div>
