--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-customer/statistic-customer.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-customer/statistic-customer.component.html
@@ -10,14 +10,14 @@
       <div class="row">
         <div class="col-lg-7 col-md-7 col-sm-7 col-xl-7 ">
 
-          <mat-form-field color="accent" appearance="fill" class="mr-2">
+          <mat-form-field color="accent" class="mr-2">
             <mat-label>Ngày bắt đầu (*)</mat-label>
             <input matInput [matDatepicker]="picker1" formControlName="fromDay">
             <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
             <mat-datepicker #picker1></mat-datepicker>
           </mat-form-field>
 
-          <mat-form-field color="accent" appearance="fill">
+          <mat-form-field color="accent" >
             <mat-label>Ngày kết thúc (*)</mat-label>
             <input matInput [matDatepicker]="picker2" formControlName="toDay">
             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
