--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
 
-        <mat-form-field color="accent" appearance="fill" class="mr-2">
+        <mat-form-field color="accent"  class="mr-2">
           <mat-label>Ngày bắt đầu (*)</mat-label>
           <input matInput [matDatepicker]="picker1" formControlName="fromDayPayment">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
@@ -19,7 +19,7 @@
           </mat-error>
         </mat-form-field>
 
-        <mat-form-field color="accent" appearance="fill" class="mr-2">
+        <mat-form-field color="accent"  class="mr-2">
           <mat-label>Ngày kết thúc (*)</mat-label>
           <input matInput [matDatepicker]="picker2" formControlName="toDayPayment">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -29,7 +29,7 @@
           </mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Thống kê</mat-label>
           <mat-select formControlName="typeReport">
             <mat-option *ngFor="let value of typeReports" [value]="value.value">
