--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
 
-        <mat-form-field appearance="fill" class="mr-2">
+        <mat-form-field  class="mr-2">
           <mat-label>Loại thống kê (*)</mat-label>
           <mat-select formControlName="typeReport">
             <mat-option *ngFor="let value of typeReports" [value]="value.value">
@@ -23,7 +23,7 @@
           </mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="mr-2">
+        <mat-form-field  class="mr-2">
           <mat-label>Chọn tuần (*)</mat-label>
           <mat-select formControlName="week" [disabled]="formStatisticMemberCard.controls.typeReport.value === 'month'
           || formStatisticMemberCard.controls.typeReport.value === 'year'">
@@ -37,7 +37,7 @@
 
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="mr-2">
+        <mat-form-field class="mr-2">
           <mat-label>Chọn tháng (*)</mat-label>
           <mat-select formControlName="month"
                       [disabled]="formStatisticMemberCard.controls.typeReport.value === 'year'">
@@ -51,7 +51,7 @@
 
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field >
           <mat-label>Chọn năm (*)</mat-label>
           <mat-select formControlName="year">
             <mat-option *ngFor="let value of yearParams" [value]="value.value">
